force-app/main/default/objects/achievement_index__c/achievement_index__c.object-meta.xml
<CustomObject>
    <label>成果指標</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>成果指標名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>