force-app/main/default/objects/achievement_index__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>成果指標</relationshipLabel>
    <relationshipName>achievement_indexAccount</relationshipName>
    <type>Lookup</type>
</CustomField>