force-app/main/default/objects/achievement_index__c/fields/Executiondate__c.field-meta.xml
<CustomField>
    <fullName>Executiondate__c</fullName>
    <label>実行日</label>
    <type>Date</type>
</CustomField>