force-app/main/default/objects/achievement_index__c/fields/JU_StageName__c.field-meta.xml
<CustomField>
    <fullName>JU_StageName__c</fullName>
    <label>フェーズ</label>
    <length>225</length>
    <type>Text</type>
</CustomField>