force-app/main/default/objects/achievement_index__c/fields/parentAccount__c.field-meta.xml
<CustomField>
    <fullName>parentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>親取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>成果指標 (親取引先)</relationshipLabel>
    <relationshipName>parentAccountAccount</relationshipName>
    <type>Lookup</type>
</CustomField>