force-app/main/default/objects/achievement_index__c/fields/productCTG__c.field-meta.xml
<CustomField>
    <fullName>productCTG__c</fullName>
    <label>商品CTG</label>
    <length>225</length>
    <type>Text</type>
</CustomField>