force-app/main/default/objects/achievement_index__c/fields/recruitment_decision__c.field-meta.xml
<CustomField>
    <fullName>recruitment_decision__c</fullName>
    <label>採用の有無</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>